pjproject/pjsip/include/pjsua-lib/pjsua.h


typedef int pjsua_call_id;
typedef int pjsua_acc_id;
typedef int pjsua_player_id;
typedef int pjsua_conf_port_id;
typedef struct pjsua_logging_config
{
    pj_bool_t	msg_logging;
    unsigned	level;
    unsigned	console_level;
    unsigned	decor;
    pj_str_t	log_filename;
    void       (*cb)(int level, const char *data, pj_size_t len);
} pjsua_logging_config;
PJ_DECL(void) pjsua_logging_config_default(pjsua_logging_config *cfg);
typedef struct pjsua_config
{
    unsigned	    max_calls;
    unsigned	    thread_cnt;
    unsigned	    nameserver_count;
    pj_str_t	    nameserver[4];
    unsigned	    outbound_proxy_cnt;
    pj_str_t	    outbound_proxy[4];
    pj_str_t	    stun_domain;
    pj_str_t	    stun_host;
    pj_str_t	    stun_relay_host;
    int		    nat_type_in_sdp;
    pj_bool_t	    require_100rel;
    unsigned	    cred_count;
    pjsip_cred_info cred_info[PJSUA_ACC_MAX_PROXIES];
    pjsua_callback  cb;
    pj_str_t	    user_agent;
} pjsua_config;
PJ_DECL(void) pjsua_config_default(pjsua_config *cfg);
typedef struct pjsua_msg_data
{
    pjsip_hdr	hdr_list;
    pj_str_t	content_type;
    pj_str_t	msg_body;
} pjsua_msg_data;
PJ_DECL(pj_status_t) pjsua_create(void);
typedef struct pjsua_media_config pjsua_media_config;
PJ_DECL(pj_status_t) pjsua_init(const pjsua_config *ua_cfg,
				const pjsua_logging_config *log_cfg,
				const pjsua_media_config *media_cfg);
PJ_DECL(pj_status_t) pjsua_start(void);
PJ_DECL(pj_status_t) pjsua_destroy(void);
PJ_DECL(pj_pool_t*) pjsua_pool_create(const char *name, pj_size_t init_size,
				      pj_size_t increment);
PJ_DECL(void) pjsua_pool_release( pj_pool_t *pool );
typedef int pjsua_transport_id;
typedef struct pjsua_transport_config
{
    unsigned		port;
    pj_str_t		public_addr;
    pj_str_t		bound_addr;
    pjsip_tls_setting	tls_setting;
} pjsua_transport_config;
PJ_DECL(void) pjsua_transport_config_default(pjsua_transport_config *cfg);
PJ_DECL(pj_status_t) pjsua_transport_create(pjsip_transport_type_e type,
					    const pjsua_transport_config *cfg,
					    pjsua_transport_id *p_id);
typedef struct pjsua_acc_config
{
    int		    priority;
    pj_str_t	    id;
    pj_str_t	    reg_uri;
    pj_bool_t	    publish_enabled;
    pjsip_auth_clt_pref auth_pref;
    pj_str_t	    pidf_tuple_id;
    pj_str_t	    force_contact;
    pj_bool_t	    require_100rel;
    unsigned	    proxy_cnt;
    pj_str_t	    proxy[PJSUA_ACC_MAX_PROXIES];
    unsigned	    reg_timeout;
    unsigned	    cred_count;
    pjsip_cred_info cred_info[PJSUA_ACC_MAX_PROXIES];
    pjsua_transport_id  transport_id;
    pj_bool_t auto_update_nat;
    unsigned	     ka_interval;
    pj_str_t	     ka_data;
} pjsua_acc_config;
PJ_DECL(void) pjsua_acc_config_default(pjsua_acc_config *cfg);
PJ_DECL(pj_status_t) pjsua_acc_add(const pjsua_acc_config *acc_cfg,
				   pj_bool_t is_default,
				   pjsua_acc_id *p_acc_id);
PJ_DECL(pj_status_t) pjsua_acc_add_local(pjsua_transport_id tid,
					 pj_bool_t is_default,
					 pjsua_acc_id *p_acc_id);
typedef struct pjsua_call_info
{
    pjsua_call_id	id;
    pjsip_role_e	role;
    pjsua_acc_id	acc_id;
    pj_str_t		local_info;
    pj_str_t		local_contact;
    pj_str_t		remote_info;
    pj_str_t		remote_contact;
    pj_str_t		call_id;
    pjsip_inv_state	state;
    pj_str_t		state_text;
    pjsip_status_code	last_status;
    pj_str_t		last_status_text;
    pjsua_call_media_status media_status;
    pjmedia_dir		media_dir;
    pjsua_conf_port_id	conf_slot;
    pj_time_val		connect_duration;
    pj_time_val		total_duration;
    struct {
	char	local_info[128];
	char	local_contact[128];
	char	remote_info[128];
	char	remote_contact[128];
	char	call_id[128];
	char	last_status_text[128];
    } buf_;
} pjsua_call_info;
PJ_DECL(pj_status_t) pjsua_call_make_call(pjsua_acc_id acc_id,
					  const pj_str_t *dst_uri,
					  unsigned options,
					  void *user_data,
					  const pjsua_msg_data *msg_data,
					  pjsua_call_id *p_call_id);
PJ_DECL(pjsua_conf_port_id) pjsua_call_get_conf_port(pjsua_call_id call_id);
PJ_DECL(pj_status_t) pjsua_call_get_info(pjsua_call_id call_id,
					 pjsua_call_info *info);
PJ_DECL(void*) pjsua_call_get_user_data(pjsua_call_id call_id);
PJ_DECL(pj_status_t) pjsua_call_hangup(pjsua_call_id call_id,
				       unsigned code,
				       const pj_str_t *reason,
				       const pjsua_msg_data *msg_data);
PJ_DECL(void) pjsua_call_hangup_all(void);
struct pjsua_media_config
{
    unsigned		clock_rate;
    unsigned		audio_frame_ptime;
    unsigned		max_media_ports;
    pj_bool_t		has_ioqueue;
    unsigned		thread_cnt;
    unsigned		quality;
    unsigned		ptime;
    pj_bool_t		no_vad;
    unsigned		ilbc_mode;
    unsigned		tx_drop_pct;
    unsigned		rx_drop_pct;
    unsigned		ec_options;
    unsigned		ec_tail_len;
    int			jb_init;
    int			jb_min_pre;
    int			jb_max_pre;
    int			jb_max;
    pj_bool_t		enable_ice;
    pj_bool_t		enable_relay;
};
PJ_DECL(void) pjsua_media_config_default(pjsua_media_config *cfg);
PJ_DECL(pj_status_t) pjsua_conf_add_port(pj_pool_t *pool,
					 pjmedia_port *port,
					 pjsua_conf_port_id *p_id);
PJ_DECL(pj_status_t) pjsua_conf_remove_port(pjsua_conf_port_id port_id);
PJ_DECL(pj_status_t) pjsua_conf_connect(pjsua_conf_port_id source,
					pjsua_conf_port_id sink);
PJ_DECL(pj_status_t) pjsua_conf_disconnect(pjsua_conf_port_id source,
					   pjsua_conf_port_id sink);
PJ_DECL(pj_status_t) pjsua_player_create(const pj_str_t *filename,
					 unsigned options,
					 pjsua_player_id *p_id);
PJ_DECL(pjsua_conf_port_id) pjsua_player_get_conf_port(pjsua_player_id id);
PJ_DECL(pj_status_t) pjsua_set_snd_dev(int capture_dev,
				       int playback_dev);
PJ_DECL(pj_status_t) pjsua_set_null_snd_dev(void);
PJ_DECL(pjmedia_port*) pjsua_set_no_snd_dev(void);
PJ_DECL(pj_status_t) pjsua_set_ec(unsigned tail_ms, unsigned options);
PJ_DECL(pj_status_t) pjsua_codec_set_priority( const pj_str_t *codec_id,
					       pj_uint8_t priority );
PJ_DECL(pj_status_t) 
pjsua_media_transports_create(const pjsua_transport_config *cfg);